<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startVideo1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStart"
            android:text="@string/start_video1" />

        <Button
            android:id="@+id/stopVideo1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStop"
            android:text="@string/stop_video1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startVideo2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStart"
            android:text="@string/start_video1" />

        <Button
            android:id="@+id/stopVideo2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStop"
            android:text="@string/stop_video2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startVideo3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStart"
            android:text="@string/start_video1" />

        <Button
            android:id="@+id/stopVideo3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStop"
            android:text="@string/stop_video3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startFadeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStart"
            android:text="@string/start_fade" />

        <Button
            android:id="@+id/stopFadeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStop"
            android:text="@string/stop_fade" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/delay"
            android:textSize="30sp" />

        <NumberPicker
            android:id="@+id/delayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp" />

    </RelativeLayout>

</LinearLayout>
